--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 </head>
 
 <body>
-    
-   <!--menú principal-->
+   
+   <!--menú principal   modificar para que sea responsive-->
+<div class="collapse-md">
    <div class="menuPpal">
         <div class="caja">Compra y venta</div>
         <div class="caja">Alquiler</div>
@@ -21,19 +22,21 @@
         <div class="caja">Obras</div>
         <img src="images/Logo.png" alt="Logo">
     </div>
-   
+</div>
+
 <!--Descripción general-->
-    <div class="fotoPlaya">
-       <img src="images/PlayaCarilo2.jpg" alt="playa" >
-       <div class="titulo"> Cariló Servicios</div>
-       <p class="parrafo">Somos un grupo de profesionales que reside en la zona con más de 20 años de experiencia 
+<div class="card bg-dark text-white">
+    <img src="images/PlayaCarilo2.jpg" class="card-img" alt="playa">
+    <div class="card-img-overlay">
+      <div class="fotoPlaya">
+      <h5 class="card-title titulo">Cariló Servicios</h5>
+      <p class="card-text parrafo">Somos un grupo de profesionales que reside en la zona con más de 20 años de experiencia 
         en cada uno de los servicios que ofrecemos, con la calidez y cordialidad que usted y sus 
         huéspedes requieren.</p>
-    </div>
+       </div>
+  </div>
+</div>
 
-    <div class="separador">
-
-    </div>
 <br><br>
 
 <!--Detalle de servicios-->
@@ -68,8 +71,7 @@
         </div>
     </div>
 
-    <div class="separador">
-    </div>
+    <br><br>
 
     <!--Formulario-->
     <div class="container">
