cambio tamaño fotoplaya y orden formulario

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <!--Descripción general-->
 <div class="card bg-dark text-white">
-    <img src="images/PlayaCarilo2.jpg" class="card-img fotoPlaya" alt="playa">
+    <img src="images/PlayaCarilo1.jpg" class="card-img fotoPlaya" alt="playa">
     <div class="card-img-overlay">
       <div class="fotoPlaya">
       <h5 class="card-title titulo">Cariló Servicios</h5>
@@ -90,7 +90,7 @@
     <!--Formulario-->
     <div class="container-fluid formulario">
         
-       <form action="" method="post" class="formulario mt-0">  
+       <form action="consultal.htlm" method="post" class="formulario mt-0">  
             <div>
                 <h4>Si desea recibir información sobre nuestros servicios por favor complete el siguiente formulario:</h4>
             </div>
@@ -98,14 +98,14 @@
                 <div class="col-md-6 mb-3 mt-3" >
                     <label for="nombre" class="form-label" >Nombre:</label>
                     <input type="text" class="form-control mb-2"  id="nombre" placeholder="Ingrese su nombre">
-                    <label for="telNumber" class="form-label">Teléfono:</label>
-                    <input type="number" class="form-control" id="telNumber" placeholder="Ingrese su número de teléfono">
-                </div>
-                <div class="col-md-6 mb-3 mt-3">
                     <label for="apellido" class="form-label">Apellido:</label>
                     <input type="text" class="form-control mb-2" id="apellido" placeholder="Ingrese su apellido">
+                                    </div>
+                <div class="col-md-6 mb-3 mt-3">
+                    <label for="telNumber" class="form-label">Teléfono:</label>
+                    <input type="number" class="form-control mb-2" id="telNumber" placeholder="Ingrese su número de teléfono">
                     <label for="exampleFormControlInput1" class="form-label">Mail:</label>
-                    <input type="email" class="form-control" id="email" placeholder="Ingrese su mail">
+                    <input type="email" class="form-control mb-2" id="email" placeholder="Ingrese su mail">
                 </div>
                 
                 <div>Deseo recibir información sobre:</div>
@@ -119,10 +119,10 @@
                 <label for="coment" class="form-label mt-2">Consulta:</label>
                 <textarea class="form-control mb-4" id="coment" rows="3" placeholder="Ingrese aquí su consulta"></textarea>   
              <div class="row">
-                <div class="col-md-6 mb-3 text-center">
+                <div class="col-md-6 mb-3 mt-3 text-center">
                     <input type="submit" class="form-control text-bg-secondary" value="Enviar">
                 </div>
-                <div class="col-md-6 mb-3 text-center">
+                <div class="col-md-6 mb-3 mt-3 text-center">
                     <input type="reset" class="form-control text-bg-secondary" value="Limpiar">
                 </div>
              </div>
