cambio en textos y tamaño menú ppal para celular

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <img src="images/casaVenta.jpg" class="card-img-top" alt="compraVenta">
             <div class="card-body">
                 <h4 class="card-title">Compra y venta</h5>
-                <p class="card-text">Si desea comprar un terreno, una casa o vender su propiedad, podemos ayudarlo. Tenemos más de 20 años de experiencia en el rubro. </p>
+                <p class="card-text">Si desea comprar un terreno, una casa o vender su propiedad puede consultar y lo asesoraremos en base a nuestra larga trayectoria.</p>
             </div>
         </div>
         <div class="card">
@@ -75,14 +75,14 @@
             <img src="images/mantenimiento2.jpg" class="card-img-top" alt="mantenimiento">
             <div class="card-body">
                 <h4 class="card-title">Mantenimiento</h4>
-                <p class="card-text">Nuestro servicio es integral. Tanto para no residentes como para huéspedes. Higiene y desifección, cuidado de parques y reparaciones en general.</p>
+                <p class="card-text">Brindamos un servicio integral. Nos encargamos de higiene y sanitización, mantenimiento de parques y todo tipo de reparaciones.</p>
             </div>
         </div>
         <div class="card">
             <img src="images/obras2.png" class="card-img-top" alt="obras">
             <div class="card-body">
                 <h4 class="card-title">Obras</h4>
-                <p class="card-text">Contamos con personal altamente capacitado para asesorarlo y ayudarlo a realizar su proyecto, ya sea modernización de ambientes, refacciones u obras desde cero. </p>
+                <p class="card-text">Nuestro personal, altamente capacitado, está listo. Podemos ayudarlo a concretar su proyecto. Tanto sea una obra nueva como una modernización o el arreglo general de un ambientes. </p>
             </div>
         </div>
     </div>
