--- a/index.html
+++ b/index.html
@@ -91,20 +91,20 @@
     </div>
 
     <!--Formulario-->
-    <div class="container-fluid formulario" id="contacto" >
+    <div class="container-fluid formulario" >
         
        <form action="consultal.htlm" method="post" class="formulario mt-0">  
             <div>
-                <h4>Si desea recibir información sobre nuestros servicios por favor complete el siguiente formulario:</h4>
+                <h4 id="contacto" >Si desea recibir información sobre nuestros servicios por favor complete el siguiente formulario:</h4>
             </div>
             <div class="row">
-                <div class="col-md-6 mb-3 mt-3" >
+                <div class="col-md-6 mb-2 mt-2" >
                     <label for="nombre" class="form-label" >Nombre:</label>
                     <input type="text" class="form-control mb-2"  id="nombre" placeholder="Ingrese su nombre">
                     <label for="apellido" class="form-label">Apellido:</label>
                     <input type="text" class="form-control mb-2" id="apellido" placeholder="Ingrese su apellido">
-                                    </div>
-                <div class="col-md-6 mb-3 mt-3">
+                </div>
+                <div class="col-md-6 mb-2 mt-2">
                     <label for="telNumber" class="form-label">Teléfono:</label>
                     <input type="number" class="form-control mb-2" id="telNumber" placeholder="Ingrese su número de teléfono">
                     <label for="exampleFormControlInput1" class="form-label">Mail:</label>
