--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
    
 <!--menú principal-->
-<nav class="navbar navbar-expand-md menuPpal">
+<nav class="navbar navbar-expand sticky-top menuPpal">
     <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+  
+      <div  id="navbarTogglerDemo01">
         <ul class="navbar-nav me-auto mb-0 mb-md-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#compraVenta">Compra y venta</a>
@@ -98,21 +96,13 @@
                 <h4 id="contacto" >Si desea recibir información sobre nuestros servicios por favor complete el siguiente formulario:</h4>
             </div>
             <div class="row">
-                <div class="col-md-6 mb-2 mt-2" >
-                    <label for="nombre" class="form-label" >Nombre:</label>
-                    <input type="text" class="form-control mb-2"  id="nombre" placeholder="Ingrese su nombre">
-                    <label for="apellido" class="form-label">Apellido:</label>
-                    <input type="text" class="form-control mb-2" id="apellido" placeholder="Ingrese su apellido">
-                </div>
-                <div class="col-md-6 mb-2 mt-2">
-                    <label for="telNumber" class="form-label">Teléfono:</label>
-                    <input type="number" class="form-control mb-2" id="telNumber" placeholder="Ingrese su número de teléfono">
-                    <label for="exampleFormControlInput1" class="form-label">Mail:</label>
-                    <input type="email" class="form-control mb-2" id="email" placeholder="Ingrese su mail">
-                </div>
-                
+                <label for="nombre" class="form-label" >Nombre y apellido:</label>
+                <input type="text" class="form-control mb-2"  id="nombre" placeholder="Ingrese su nombre y apellido">
+                <label for="exampleFormControlInput1" class="form-label">Mail:</label>
+                <input type="email" class="form-control mb-2" id="email" placeholder="Ingrese su mail">
+                           
                 <div>Deseo recibir información sobre:</div>
-                <select class="form-select mt-2" aria-label="Default select example">
+                <select class="form-select mt-3" aria-label="Default select example">
                     <option selected >Seleccionar</option>
                     <option value="1">Compra y venta</option>
                     <option value="2">Alquiler</option>
